--- a/public/index.html
+++ b/public/index.html
@@ -3,24 +3,73 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Hello, world!</title>
+    <title>StarWars</title>
     <!-- <link rel="stylesheet" href="/stylesheets/application.css"> -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg bg-primary "data-bs-theme="dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">ENTR-451</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Dropdown
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="#">Something else here</a></li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled">Disabled</a>
+            </li>
+          </ul>
+          <form class="d-flex" role="search">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+          </form>
+        </div>
+      </div>
+    </nav>
+
+    
     <div class="container pt-5">
     <h1 class="text-primary">Introduction to StarWars World!</h1>
     <h2 class="bright lead">Main Characters</h2>
 
     <div class="row">
-      <div class="col">
+      <div class="col-md-6 col-lg-3">
         <p id="boba">
           With his customized Mandalorian armor, deadly weaponry, and silent demeanor, Boba Fett was one of the most feared bounty hunters in the galaxy. A genetic clone of his 'father,' bounty hunter Jango Fett, Boba learned combat and martial skills from a young age.
           <img src="/images/boba.jpeg" alt="old boba" class="img-fluid">
         </p>
       </div>
 
-      <div class="col">
+      <div class="col-md-6 col-lg-3">
+        <p id="grogu" class="bright">
+          Grogu, colloquially referred to as Baby Yoda, is a character from the Star Wars Disney+ original television series The Mandalorian. He is a toddler member of the same unnamed species as the Star Wars characters Yoda and Yaddle, with whom he shares a strong ability in the Force.
+          <img src="/images/grogu.jpeg" alt="adorable baby grogu" class="img-fluid">
+        </p>
+      </div>
+
+      <div class="col-md-6 col-lg-3">
+        <p id="boba">
+          With his customized Mandalorian armor, deadly weaponry, and silent demeanor, Boba Fett was one of the most feared bounty hunters in the galaxy. A genetic clone of his 'father,' bounty hunter Jango Fett, Boba learned combat and martial skills from a young age.
+          <img src="/images/boba.jpeg" alt="old boba" class="img-fluid">
+        </p>
+      </div>
+
+      <div class="col-md-6 col-lg-3">
         <p id="grogu" class="bright">
           Grogu, colloquially referred to as Baby Yoda, is a character from the Star Wars Disney+ original television series The Mandalorian. He is a toddler member of the same unnamed species as the Star Wars characters Yoda and Yaddle, with whom he shares a strong ability in the Force.
           <img src="/images/grogu.jpeg" alt="adorable baby grogu" class="img-fluid">
@@ -28,12 +77,11 @@
       </div>
 
     </div>
-
-    
    
     <p>
-      <a href="https://starwars.com/">Go to StarWars.com</a>
+      <a href="https://starwars.com/" class="btn btn-primary">Go to StarWars.com</a>
     </p>
   </div>
+
   </body>
 </html>
